--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -70,7 +70,7 @@
                                 <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                                <a class="nav-link" href="{% url 'login' %}"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#"> <i class="fa fa-user"
