--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html>
 
@@ -28,17 +27,11 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet" />
     <!-- responsive style -->
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
     <div class="hero_area">
-        <div class="hero_bg_box">
-            <div class="bg_img_box">
-                <img src="{% static 'images/hero-bg.png' %}" alt="">
-            </div>
-        </div>
-        <!-- header section strats -->
-
         {% block header %}
         <header class="header_section">
             <div class="container-fluid">
@@ -70,11 +63,10 @@
                                 <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'login' %}"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                                <a class="nav-link" href="{% url 'login' %}"> <i class="fas fa-sign-in-alt"></i> Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"> <i class="fa fa-user"
-                                        aria-hidden="true"></i> SignUP</a>
+                                <a class="nav-link" href="#"> <i class="fas fa-sign-out-alt"></i> SignUP</a>
                             </li>
                             <form class="form-inline">
                                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
@@ -184,6 +176,7 @@
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
             </script>
         <!-- End Google Map -->
+    </div>
 </body>
 
 </html>
