--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -3,7 +3,6 @@
 <html>
 
 <head>
-    <!-- Basic -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Mobile Metas -->
@@ -12,8 +11,8 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="">
-    <title>Finexo</title>
+    <link rel="shortcut icon" href="" type="">
+    <title>Portfolio</title>
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
     <!-- fonts style -->
@@ -40,51 +39,47 @@
                     <a class="navbar-brand" href="{% url 'home' %}">
                         <span>Portfolio</span>
                     </a>
-                    
                     <!-- Toggle button for mobile view -->
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    
-                    <!-- Navbar content -->
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'about' %}">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'service' %}">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'feature' %}">Why Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-                            </li>
-                            <!-- Login & Signup -->
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fas fa-user-plus"></i> Sign Up</a>
-                            </li>
-                            <!-- Search form -->
-                            <li class="nav-item">
-                                <form class="form-inline">
-                                    <button class="btn nav_search-btn" type="submit">
-                                        <i class="fa fa-search" aria-hidden="true"></i>
-                                    </button>
-                                </form>
-                            </li>
+                    <!-- Navbar content with centered links and right-aligned items -->
+                    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                        <!-- Centered nav items -->
+                        <ul class="navbar-nav">
+                            <li class="nav-item active"><a class="" href="{% url 'home' %}">Home</a></li>
+                            <li class="nav-item"><a class="" href="{% url 'about' %}">About</a></li>
+                            <li class="nav-item"><a class="" href="{% url 'service' %}">Services</a></li>
+                            <li class="nav-item"><a class="" href="{% url 'feature' %}">Why Us</a></li>
+                            <li class="nav-item"><a class="" href="{% url 'contact' %}">Contact</a></li>
                         </ul>
+
+                        <!-- Right-aligned search and auth buttons -->
+                        <div class="navbar-nav ml-auto align-items-center">
+                            <!-- Search bar -->
+                            <form class="form-inline my-2 my-lg-0">
+                                <input class="form-control mr-sm-2 search-input" type="search" placeholder="Search"
+                                    aria-label="Search">
+                                <button class="btn nav_search-btn" type="submit">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </form>
+
+                            <!-- Sign In / Sign Up -->
+                            <a class="" href="{% url 'login' %}">
+                                <i class="fas fa-sign-in-alt"></i> Login
+                            </a>
+                            <a class="" href="#">
+                                <i class="fas fa-user-plus"></i> Sign Up
+                            </a>
+                        </div>
                     </div>
                 </nav>
             </div>
         </header>
+
 
         {% endblock header %}
 
@@ -181,19 +176,19 @@
         <!-- Google Map -->
         <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-        </script>
-          <script>
-            document.addEventListener("DOMContentLoaded", function() {
+            </script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
                 // Sticky navbar
-                window.addEventListener('scroll', function() {
+                window.addEventListener('scroll', function () {
                     var header = document.querySelector('.header_section');
                     header.classList.toggle('sticky', window.scrollY > 50);
                 });
-            
+
                 // Smooth scrolling for links
                 const navLinks = document.querySelectorAll('.nav-link');
                 navLinks.forEach(link => {
-                    link.addEventListener('click', function(e) {
+                    link.addEventListener('click', function (e) {
                         e.preventDefault();
                         document.querySelector(this.getAttribute('href')).scrollIntoView({
                             behavior: 'smooth'
@@ -201,7 +196,17 @@
                     });
                 });
             });
-            </script>
+        </script>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                // Sticky navbar on scroll
+                window.addEventListener('scroll', function () {
+                    var header = document.querySelector('.header_section');
+                    header.classList.toggle('sticky', window.scrollY > 50);
+                });
+            });
+        </script>
 
         <!-- End Google Map -->
     </div>
